--- a/Week03/style.css
+++ b/Week03/style.css
@@ -11,3 +11,10 @@ body {
     background-attachment: fixed;
     background-color: #F7F3DE;
 }
+
+header h1  {
+  font-size: 350%;
+  color: #F7F3DE;
+  paddingg: 40px 40px 40px 120px;
+  background-image: url("header-image-1.gif");
+}
