--- a/Week03/style.css
+++ b/Week03/style.css
@@ -15,6 +15,6 @@ body {
 header h1  {
   font-size: 350%;
   color: #F7F3DE;
-  paddingg: 40px 40px 40px 120px;
+  padding: 40px 40px 40px 120px;
   background-image: url("header-image-1.gif");
 }
