--- a/Week03/styles.css
+++ b/Week03/styles.css
@@ -2,7 +2,7 @@
 /* CSS Document */
 
 body {
-    font-family: "Gorgea", serif;
+    font-family: "Georgia", serif;
     color: black;
     line-height: 140%;
     margin: 30px;
@@ -14,7 +14,7 @@ body {
 
 header h1  {
   font-size: 350%;
-  color: #F7F3DE;
+  color: #7C1A00;
   padding: 40px 40px 40px 120px;
   background-image: url("header-image-1.gif");
   background-repeat: no-repeat;
@@ -36,7 +36,7 @@ nav ul {
   color: #7C1A00;
 }
 
-nav a {
+nab a {
   color: white;
   background-color: #8C9273;
   padding: 3px 60px 3px 3px;
