--- a/Fun/syle.css
+++ b/Fun/syle.css
@@ -4,12 +4,16 @@
 body {
   font-family: "Georgia", serif;
   color: black;
-  line-height: 150%;
-  margin: 50px;
+  line-height: 140%;
+  margin: 30px;
   background-image: url("Valentines day hero.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-color: #FFA3B8;
+}
+
+#cont {
+  margin-bottom: 50px;
 }
 
 header h1 {
