--- a/Fun/syle.css
+++ b/Fun/syle.css
@@ -25,6 +25,9 @@ header h1 {
 }
 
 nav {
+  color: white;
   float: left;
-  width: 350px;
+  width: 150px;
+  background-color: #722F36;
+  padding: 0px 30px 0px 30px;
 }
