--- a/Week03/styles.css
+++ b/Week03/styles.css
@@ -48,8 +48,9 @@ nav a:hover {
 }
 
 #content {
-  background-image: url("trans-bg.gif");
   border: 1px: #CCCCCC;
   margin-left: 180px;
   padding: 10px;
+  background-image: url("trans-bg.gif");
+  background-repeat: no-repeat;
 }
