--- a/Week03/styles.css
+++ b/Week03/styles.css
@@ -48,7 +48,7 @@ nav a:hover {
 }
 
 #content {
-  border: 1px: #CCCCCC;
+  border: 1px: black;
   margin-left: 180px;
   padding: 10px;
   background-image: url("trans-bg.gif");
