--- a/Week03/styles.css
+++ b/Week03/styles.css
@@ -48,9 +48,52 @@ nav a:hover {
 }
 
 #content {
-  border: 1px: black;
+  background-image: url("trans-bg.gif");
+  border: 1px;
+  border-style: solid;
   margin-left: 180px;
   padding: 10px;
-  background-image: url("trans-bg.gif");
+}
+
+footer {
+  clear: both;
+  text-align: center;
+}
+
+footer li {
+  display: inline;
+  padding: 10px 10px 10px 10px;
+}
+
+h1 {
+  color: #8C9273;
+}
+
+h2 {
+  border-top: 20px solid #8C9273;
+  border-bottom: 5px solid #8C9273;
+  padding-left: 5px;
+}
+
+h3 {
+  background-image: url("header-star-1.gif");
   background-repeat: no-repeat;
+  padding-left: 20px;
+}
+
+blockquote {
+  background-color: #ffe597;
+}
+
+ul {
+  list-style-type: square;
+}
+
+a {
+  color: #7C1A00;
+  font-weight: bold;
+}
+
+a:hover {
+  background-color: #7C1A00;
 }
