--- a/Week03/styles.css
+++ b/Week03/styles.css
@@ -78,7 +78,7 @@ h1 {
 }
 
 h2 {
-  border-top: 20px solid #8C9273;
+  border-left: 20px solid #8C9273;
   border-bottom: 5px solid #8C9273;
   padding-left: 5px;
 }
