--- a/Week04/styles2.css
+++ b/Week04/styles2.css
@@ -6,7 +6,7 @@ body {
   color: black;
   line-height: 120%;
   margin: 50px;
-  background-image: url("pizza-background.gif");
+  background-image: url("pizza-background.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-color: clear;
