--- a/Week04/styles2.css
+++ b/Week04/styles2.css
@@ -6,10 +6,9 @@ body {
   color: black;
   line-height: 120%;
   margin: 50px;
-  background-image: url("pizza-background.jpg");
+  background-image: url("Pizza-Background.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-color: clear;
 }
 
 header h2 {
