--- a/Week04/styles2.css
+++ b/Week04/styles2.css
@@ -52,8 +52,7 @@ section {
 }
 
 nav {
-  background-color: white;
-  background-color: transparent;
+  background-color: rgba(0, 0, 0, 0.5);
   padding: 0.5%;
   border: solid;
   float: top;
