--- a/Week04/styles2.css
+++ b/Week04/styles2.css
@@ -18,6 +18,7 @@ header h2 {
   padding: 20px 20px 20px 120px;
   background-image: url("header.png");
   background-repeat: no-repeat;
+  background-color: transparent;
 }
 
 section {
@@ -53,7 +54,6 @@ section {
 
 nav {
   background-color: white;
-  opacity: .5;
   padding: 0.5%;
   border: solid;
   float: top;
