--- a/Week04/styles2.css
+++ b/Week04/styles2.css
@@ -53,9 +53,7 @@ section {
 }
 
 nav {
-  color: black;
-  background-color: white;
-  opacity: 0.5;
+  background-color: rgba(255, 255, 255, .5);
   padding: 1%;
   border: solid;
   float: top;
