--- a/Week04/styles2.css
+++ b/Week04/styles2.css
@@ -10,6 +10,7 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
+  background-color: rgba(255, 255, 255, .5);
 }
 
 header h2 {
@@ -18,7 +19,6 @@ header h2 {
   padding: 20px 20px 20px 120px;
   background-image: url("header.png");
   background-repeat: no-repeat;
-  background-color: transparent;
 }
 
 section {
@@ -30,6 +30,7 @@ section {
 
 #container {
   margin: 10px;
+  line-height: 200%;
   float: left;
   border: flex;
   padding: 1%;
@@ -74,7 +75,7 @@ nav li {
 aside {
   float: right;
   width: 350px;
-  background-color: white;
+  background-color: rgba(255, 255, 255, .25);
   border: solid;
   padding: 1%;
   margin-right: 0px;
