--- a/Week04/styles2.css
+++ b/Week04/styles2.css
@@ -19,6 +19,7 @@ header h2 {
   padding: 20px 20px 20px 120px;
   background-image: url("header.png");
   background-repeat: no-repeat;
+  background-color: transparent;
 }
 
 section {
