--- a/Week04/styles2.css
+++ b/Week04/styles2.css
@@ -6,7 +6,7 @@ body {
   color: black;
   line-height: 120%;
   margin: 50px;
-  background-image: url("Pizza-Background.jpg");
+  background-image: url("lasagna-background.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -15,9 +15,10 @@ body {
 header h1 {
   font-size: 250%;
   color: black;
-  padding: 20px 20px 20px 120px;
+  padding: 20px 20px 20px 0px;
   background-image: url("header.png");
   background-repeat: no-repeat;
+  text-align: center;
 }
 
 section {
@@ -52,6 +53,15 @@ section {
   margin: 30px;
   margin-left: 100px;
   line-height: 120%;
+}
+
+#container2 h3 {
+  margin-left: -30px;
+}
+
+aside2 {
+  float: right;
+  background-image: url("meat-lasagma.jpg");
 }
 
 #container3 {
