--- a/Week04/styles2.css
+++ b/Week04/styles2.css
@@ -12,7 +12,7 @@ body {
   background-size: cover;
 }
 
-header h1 {
+header h2 {
   font-size: 250%;
   color: black;
   padding: 20px 20px 20px 0px;
@@ -41,7 +41,7 @@ section {
 
 #mini {
     font-size: 150%;
-    line-height: 225%;;
+    line-height: 225%;
 }
 
 #container h5 {
@@ -61,7 +61,7 @@ section {
 
 Aside {
   float: right;
-  background-image: url("meat-lasagma.jpg");
+  background-image: url("meat-lasagna.jpg");
 }
 
 #container3 {
@@ -96,6 +96,7 @@ aside {
   margin-right: 0px;
   margin-left: 30px;
   margin-top:30px;
+  line-height: 100%;
 }
 
 footer {
