--- a/Week04/styles2.css
+++ b/Week04/styles2.css
@@ -61,8 +61,12 @@ section {
 
 #mini2 {
   float: right;
+  width: 300px;
+  height: 200px;
   background-image: url("meat-lasagna.jpg");
-  
+  background-size: cover;
+  border: flex;
+  padding: 2%;
 }
 
 #container3 {
