--- a/Week03/styles.css
+++ b/Week03/styles.css
@@ -18,6 +18,7 @@ header h1  {
   padding: 40px 40px 40px 120px;
   background-image: url("header-image-1.gif");
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
 #container {
